# spotifyrust

./: .env  Cargo.toml
src/: main.rs  python.py  token_cache.json
src/modules/: .spotify_token_cache.json  conversion.rs  mod.rs  playlists.rs  retrieve.rs  storage.rs  token.rs  token_cache.json
