[package]
name = "rspot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
rspotify = { version = "0.11.6", features = ["env-file", "cli"] }
env_logger = "0.10.0"
reqwest = "0.11.16"
chrono = "0.4.24"
futures = "0.3.28"
futures-util = "0.3.28"
serde = "1.0.159"
json = "0.12.4"
actix-rt = "2.8.0"
serde_json = "1.0.96"
itertools = "0.10.5"
rand = "0.8.5"
